--- a/ap-catalog-info.yaml
+++ b/ap-catalog-info.yaml
@@ -3,7 +3,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: allegroBackstagePlugins
-  description: "This repo contains Backstage plugins delivered by Allegro"
+  description: 'This repo contains Backstage plugins delivered by Allegro'
   title: Allegro Backstage Plugins
   annotations:
     backstage.io/techdocs-ref: dir:.
