feat: setup chat bot plugin and copy from internal repository

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -111,3 +111,10 @@ kubernetes:
 permission:
   # setting this to `false` will disable permissions
   enabled: true
+chatBot:
+  key: ${Backstage__Gpt__Key}
+  endpoint: ${Backstage__Gpt__Endpoint}
+  chatCompletionPrimaryModel: gpt-4o
+  chatCompletionSecondaryModel: gpt-4o-mini
+  embeddingModel: text-embedding-ada-002-d1
+  slackChannels: [Backstage__ChatBot__Slack__Channel]
