--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
   "include": [
     "packages/*/src",
     "packages/*/config.d.ts",
-    "plugins/*/src",
-    "plugins/*/config.d.ts",
-    "plugins/*/dev",
-    "plugins/*/migrations"
+    "plugins/**/src",
+    "plugins/**/config.d.ts",
+    "plugins/**/dev",
+    "plugins/**/migrations"
   ],
   "exclude": ["node_modules"],
   "compilerOptions": {
