--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint": "backstage-cli repo lint --since origin/master",
     "lint:all": "backstage-cli repo lint",
     "prettier:check": "prettier --check .",
-    "new": "backstage-cli new --scope allegro --no-private"
+    "new": "backstage-cli new --scope allegro --no-private",
+    "prepare": "husky"
   },
   "workspaces": {
     "packages": [
@@ -33,7 +34,11 @@
   "devDependencies": {
     "@backstage/cli": "^0.29.5",
     "@backstage/e2e-test-utils": "^0.1.1",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@playwright/test": "^1.32.3",
+    "commitlint": "^19.6.1",
+    "husky": "^9.1.7",
     "node-gyp": "^10.0.0",
     "prettier": "^2.3.2",
     "typescript": "~5.4.0"
