--- a/plugins/chat-bot/chat-bot-backend/package.json
+++ b/plugins/chat-bot/chat-bot-backend/package.json
@@ -4,13 +4,25 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
+  "description": "Backstage ChatBot back end plugin",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/allegro/backstage-plugins",
+    "directory": "plugins/chat-bot/chat-bot-backend"
+  },
   "publishConfig": {
     "access": "public",
     "main": "dist/index.cjs.js",
     "types": "dist/index.d.ts"
   },
   "backstage": {
-    "role": "backend-plugin"
+    "role": "backend-plugin",
+    "pluginId": "chat-bot",
+    "pluginPackages": [
+      "@allegro/backstage-plugin-chat-bot",
+      "@allegro/backstage-plugin-chat-bot-backend",
+      "@allegro/backstage-plugin-chat-bot-common"
+    ]
   },
   "scripts": {
     "start": "backstage-cli package start",
