--- a/plugins/chat-bot/chat-bot-common/package.json
+++ b/plugins/chat-bot/chat-bot-common/package.json
@@ -5,6 +5,11 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/allegro/backstage-plugins",
+    "directory": "plugins/chat-bot/chat-bot-common"
+  },
   "publishConfig": {
     "access": "public",
     "main": "dist/index.cjs.js",
@@ -12,7 +17,13 @@
     "types": "dist/index.d.ts"
   },
   "backstage": {
-    "role": "common-library"
+    "role": "common-library",
+    "pluginId": "chat-bot",
+    "pluginPackages": [
+      "@allegro/backstage-plugin-chat-bot",
+      "@allegro/backstage-plugin-chat-bot-backend",
+      "@allegro/backstage-plugin-chat-bot-common"
+    ]
   },
   "sideEffects": false,
   "scripts": {
