--- a/plugins/chat-bot/chat-bot/package.json
+++ b/plugins/chat-bot/chat-bot/package.json
@@ -4,13 +4,25 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
+  "description": "Backstage ChatBot front end plugin",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/allegro/backstage-plugins",
+    "directory": "plugins/chat-bot/chat-bot"
+  },
   "publishConfig": {
     "access": "public",
     "main": "dist/index.esm.js",
     "types": "dist/index.d.ts"
   },
   "backstage": {
-    "role": "frontend-plugin"
+    "role": "frontend-plugin",
+    "pluginId": "chat-bot",
+    "pluginPackages": [
+      "@allegro/backstage-plugin-chat-bot",
+      "@allegro/backstage-plugin-chat-bot-backend",
+      "@allegro/backstage-plugin-chat-bot-common"
+    ]
   },
   "sideEffects": false,
   "scripts": {
@@ -28,10 +40,9 @@
     "@backstage/core-plugin-api": "^1.10.3",
     "@backstage/frontend-plugin-api": "^0.9.4",
     "@backstage/theme": "^0.6.3",
-    "@mui/icons-material": "6.1.6",
-    "@mui/lab": "5.0.0-alpha.173",
-    "@mui/material": "5.16.7",
-    "@mui/styles": "5.16.7",
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/icons": "^4.9.1",
+    "@mui/material": "^5.16.14",
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
