--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,11 @@ jobs:
         with:
           node-version: '20.x'
       - run: |
+          yarn install --immutable
+          git --version
+          node --version
+          npm --version
+          npx commitlint --version
           npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
           ./ci/lint.sh
 
