--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,6 @@ jobs:
           node-version: '20.x'
       - run: |
           yarn install --immutable
-          npx commitlint --version
           npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
           ./ci/lint.sh
 
@@ -24,7 +23,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        typescript_version: [4.x, 5.2.2, latest]
+        typescript_version: [latest]
 
     steps:
       - uses: actions/checkout@v4
